--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -40,7 +40,5 @@ jobs:
           
           echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: Bearer $accessToken\" \"${url}\"" > curl2.sh
           cat curl2.sh
-          ./curl2.sh
-          cat headers.txt
-
-          
+          ./curl2.sh >> results.txt
+          cat results.txt
