--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -38,7 +38,7 @@ jobs:
           cat > curl2.sh
           chmod +x curl2.sh
           
-          echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: Bearer $accessToken\" \"${url}\"" > curl2.sh
+          echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: SSWS ${{ secrets.TF_VAR_api_key }}\" \"${url}\"" > curl2.sh
           cat curl2.sh
           ./curl2.sh >> results.txt
           cat results.txt
