--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -15,7 +15,13 @@ jobs:
       - name: Get changed files
         id: generate-jwt
         run: |
-         
+          cd js
+          npm init -y
+          npm install
+          npm i njwt
+          npm ci
+
+          
           declare okta_url="https://dev-86564089.okta.com/api/v1"
           declare result=""
           declare url=""
