--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -17,7 +17,9 @@ jobs:
         run: |
           cd js
           npm init -y
-          ls
+          npm install
+          npm i njwt
+          npm ci
           
           declare okta_url="https://dev-86564089.okta.com/api/v1"
           declare result=""
