--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     environment: 'generate jwt'
+    outputs:
+      jwt: ${{ steps.generate-jwt.outputs.jwt }}
     steps:
       # Make sure we have some code to diff.
       - name: Checkout repository
@@ -17,10 +19,26 @@ jobs:
         run: |
           cd js
           npm init -y
+          npm install
           npm i njwt
           npm ci
-          npm uninstall njwt
+          token=$(node generate-jwt.js "${{ secrets.TF_VAR_private_key }}" "0oah96zm3mSlrHKV05d7" "dev-86564089.okta.com")
+          echo $token >> token.txt
+          cat token.txt
+          echo "jwt=$(echo $token | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           
+  deploy:
+    name: 'Get Okta Resource ID'
+    environment: 'generate jwt'
+    runs-on: ubuntu-latest
+    needs: [ generate-jwt ]
+    steps:
+      - name: Get Resource ID
+        run: |
+          echo ${{ needs.generate-jwt.outputs.jwt }}
+          token=${{ needs.generate-jwt.outputs.jwt }}
+          echo "length:"
+          echo ${#token}
           declare okta_url="https://dev-86564089.okta.com/api/v1"
           declare result=""
           declare url=""
@@ -33,7 +51,7 @@ jobs:
           cat > curl2.sh
           chmod +x curl2.sh
           
-          echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: SSWS ${{ secrets.TF_VAR_api_key }}\" \"${url}\"" > curl2.sh
+          echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: Bearer ${{ needs.generate-jwt.outputs.jwt }}\" \"${url}\"" > curl2.sh
           cat curl2.sh
           ./curl2.sh >> results.txt
           cat results.txt
