--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Get Resource ID
         run: |
           jwt=${{ needs.generate-jwt.outputs.jwt }}
-          token=$(echo $jwt | sed 's/=.*//g')=$(echo ${jwt#*=} | base64 -di | base64 -di)
+          jtoken=$(echo $jwt | sed 's/=.*//g')
+          token=$(echo ${jtoken#*=} | base64 -di | base64 -di)
           echo "JWT"
           echo $token
           declare okta_url="https://dev-86564089.okta.com/api/v1"
