--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -25,6 +25,7 @@ jobs:
           token=$(node generate-jwt.js "${{ secrets.TF_VAR_private_key }}" "0oah96zm3mSlrHKV05d7" "dev-86564089.okta.com")
           echo $token >> token.txt
           cat token.txt
+          gh secret set JWT_TOKEN -b $token
           echo "jwt=$(echo $token | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           
   deploy:
@@ -35,6 +36,7 @@ jobs:
     steps:
       - name: Get Resource ID
         run: |
+          
           jwt=${{ needs.generate-jwt.outputs.jwt }}
           jwt=$(echo $jwt | sed 's/=.*//g')
           jwt=$(echo ${jwt#*=} | base64 -di | base64 -di)
@@ -43,7 +45,7 @@ jobs:
           
           cat > curl_access_token.sh
           chmod +x curl_access_token.sh
-          echo "curl --location --request POST 'https://dev-86564089.okta.com/oauth2/v1/token' --header 'Accept: application/json' --header 'Content-Type: application/x-www-form-urlencoded' --data-urlencode 'grant_type=client_credentials' --data-urlencode 'scope=okta.apps.read' --data-urlencode 'client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer' --data-urlencode 'client_assertion=$jwt'" > curl_access_token.sh
+          echo "curl --location --request POST 'https://dev-86564089.okta.com/oauth2/v1/token' --header 'Accept: application/json' --header 'Content-Type: application/x-www-form-urlencoded' --data-urlencode 'grant_type=client_credentials' --data-urlencode 'scope=okta.apps.read' --data-urlencode 'client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer' --data-urlencode 'client_assertion=${{ secrets.JWT_TOKEN }}'" > curl_access_token.sh
           accessToken=$(./curl_access_token.sh | jq -r '.access_token')
           
           declare okta_url="https://dev-86564089.okta.com/api/v1"
