--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -27,8 +27,30 @@ jobs:
           token=$(node generate-jwt.js "${{ secrets.TF_VAR_private_key }}" "0oah96zm3mSlrHKV05d7" "dev-86564089.okta.com")
           echo $token >> token.txt
           cat token.txt
-          gh secret set JWT_TOKEN -b $token
           echo "jwt=$(echo $token | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
+          
+          
+          cat > curl_access_token.sh
+          chmod +x curl_access_token.sh
+          echo "curl --location --request POST 'https://dev-86564089.okta.com/oauth2/v1/token' --header 'Accept: application/json' --header 'Content-Type: application/x-www-form-urlencoded' --data-urlencode 'grant_type=client_credentials' --data-urlencode 'scope=okta.apps.read' --data-urlencode 'client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer' --data-urlencode 'client_assertion=$token'" > curl_access_token.sh
+          accessToken=$(./curl_access_token.sh | jq -r '.access_token')
+          
+          declare okta_url="https://dev-86564089.okta.com/api/v1"
+          declare result=""
+          declare url=""
+          declare jq_filter=""
+          
+          url="$okta_url/apps"
+          jq_filter="jq"
+          
+          
+          cat > curl2.sh
+          chmod +x curl2.sh
+          
+          echo "curl -s -D headers.txt -X GET -H \"Accept: application/json\" -H \"Content-Type: application/json\" -H \"Authorization: Bearer $accessToken\" \"${url}\" | jq 'map({name: .label, id: .id})'" > curl2.sh
+          cat curl2.sh
+          ./curl2.sh >> results.txt
+          cat results.txt
           
   deploy:
     name: 'Get Okta Resource ID'
