--- a/.github/workflows/generate-key.yml
+++ b/.github/workflows/generate-key.yml
@@ -35,7 +35,7 @@ jobs:
           chmod +x curl_access_token.sh
           echo "curl --location --request POST 'https://dev-86564089.okta.com/oauth2/v1/token' --header 'Accept: application/json' --header 'Content-Type: application/x-www-form-urlencoded' --data-urlencode 'grant_type=client_credentials' --data-urlencode 'scope=okta.apps.read' --data-urlencode 'client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer' --data-urlencode 'client_assertion=$token'" > curl_access_token.sh
           accessToken=$(./curl_access_token.sh | jq -r '.access_token')
-          at=$(echo accessToken | base64 -w0 | base64 -w0)
+          at=$(echo $accessToken | base64 -w0 | base64 -w0)
           echo "ACCESS TOKEN"
           echo $at
           
